Fix user modal alignment issue.
RT #535

--- a/frontend/src/components/shared/popUps/userModal/userModal.scss
+++ b/frontend/src/components/shared/popUps/userModal/userModal.scss
@@ -147,7 +147,7 @@
   .MuiDialogActions-root {
     justify-content: center;
     margin-bottom: 12px;
-    padding: 20px 23px 20px 26px;
+    padding: 20px 24px 20px 24px;
     .cancel-btn {
       background: #efe1ff;
       color: #773cbd;
@@ -170,7 +170,6 @@
       font-size: 16px;
       font-weight: 600;
       border-radius: 8px;
-      margin-left: 10px !important;
       text-transform: capitalize;
       &:hover {
         color: #fff;
